--- a/clinica_online/src/app/pages/bienvenida/bienvenida.component.html
+++ b/clinica_online/src/app/pages/bienvenida/bienvenida.component.html
@@ -1,1 +1,38 @@
-<app-navbar></app-navbar>
+
+    <div class="row">
+        <div class="col-3">
+            <app-navbar></app-navbar>
+        </div>
+        <div class="col-9">
+            <div class="container">
+                <div class="row">
+                    <div class="card col-9 offset-1 slide-bottom" style="height: 350px; margin-left: 1em;">
+                        <img class="card-img-top" [src]="icon" alt="ico" [ngStyle]="{'width':'16.5rem'}">
+                        <div class="card-body">
+                          <h3 class="card-title">Bienvenida!</h3>
+                          <p class="card-text">
+                              Esperamos que disfrutes de la Sala de Juegos: Laboratorio IV
+                            </p>
+                            <p class="card-text">
+                                UTN-FRA
+                            </p>
+                            <div class="row" style="margin-top: 6em;">
+                                <div class="col-6">
+                                    <button class="button-33" role="button">
+                                        <i class="fa-solid fa-user-plus"></i>
+                                        REGISTRO
+                                    </button>
+                                </div>
+                                <div class="col-6">
+                                    <button class="button-33" role="button">
+                                        <i class="fa-solid fa-key"></i>
+                                        LOGIN
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+
