--- a/clinica_online/src/styles.css
+++ b/clinica_online/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: url(assets/img/background_clinic.jpeg) no-repeat center center fixed;
+    opacity: 0.97;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    overflow: hidden;
+}
