--- a/clinica_online/src/app/components/navbar/navbar.component.css
+++ b/clinica_online/src/app/components/navbar/navbar.component.css
@@ -1,6 +1,7 @@
 body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
+  position: fixed;
 }
 
 html {
@@ -33,12 +34,12 @@ main {
 
 .b-example-divider {
   flex-shrink: 0;
-  width: 1.5rem;
+  width: 0.2rem;
   height: 100vh;
   background-color: rgba(0, 0, 0, .1);
   border: solid rgba(0, 0, 0, .15);
   border-width: 1px 0;
-  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, 0), inset 0 .125em .5em rgba(0, 0, 0, 0);
 }
 
 .bi {
@@ -101,5 +102,16 @@ main {
 
 .fw-semibold { font-weight: 600; }
 .lh-tight { line-height: 1.25; }
+
+.opt-sidebar:hover {
+  background-color: #1abae2;
+  transform: scale(1.05);
+}
+
+.clicked {
+  background-color: #1abae2;
+  transform: scale(1.05);
+} 
+
 
 
