--- a/clinica_online/src/app/components/registro-paciente/registro-paciente.component.css
+++ b/clinica_online/src/app/components/registro-paciente/registro-paciente.component.css
@@ -125,3 +125,8 @@ h2 {
     background-color: #1abae2;
     border-radius: 50px;
 }
+
+.button-33:disabled {
+  background-color: #94999bc9;
+  box-shadow: rgba(28, 31, 53, 0.178) 0 -25px 18px -14px inset,rgba(28, 31, 53, 0.178) 0 1px 2px,rgba(28, 31, 53, 0.178) 0 2px 4px,rgba(28, 31, 53, 0.178) 0 4px 8px,rgba(28, 31, 53, 0.178) 0 8px 16px,rgba(28, 31, 53, 0.178) 0 16px 32px;
+}
