--- a/clinica_online/src/app/pages/login/login.component.html
+++ b/clinica_online/src/app/pages/login/login.component.html
@@ -1,1 +1,56 @@
-<p>login works!</p>
+
+<div class="row wrapper">
+    <div class="col-3 sidebar">
+        <app-navbar></app-navbar>
+    </div>
+    <div class="col-9 main">
+        <div class="container">
+            <div class="row">
+                <div class="card col-9 offset-1 scale-up-top" style="height: 500px; margin-left: 1em;">
+                    <img class="card-img-top mt-2" [src]="icon" alt="ico" [ngStyle]="{'width':'6.5rem'}">
+                    <div class="card-body">
+                      <h2 class="card-title">LOGIN</h2>
+                      <p class="card-text" style="font-size: 20px;">
+                          Por favor, ingrese sus credenciales para iniciar sesión. 
+                       </p>
+
+                       <form [formGroup]="credentials" (ngSubmit)="login()">
+                            <div class="row">
+                                <div class="form-group col-6 mt-1">
+                                    <i class="fa-solid fa-at"></i> 
+                                    <br>
+                                    <label for="email">Correo electrónico</label>
+                                    <input formControlName="email" type="text" id="email" class="form-control" name="email" placeholder="email@email.com" [(ngModel)]="email">
+                                    
+                                    <small style="color: rgb(255, 0, 0); font-weight: bold;"
+                                      *ngIf="this.credentials.get('email')?.invalid && this.credentials.get('email')?.touched">
+                                      Correo electrónico es requerido</small>
+                                </div>
+                                <div class="form-group col-6 mt-1">
+                                    <i class="fa-solid fa-lock"></i>
+                                    <br>
+                                    <label for="password">Contraseña</label>
+                                    <input formControlName="password" type="password" id="password" class="form-control" name="password" [(ngModel)]="password">
+                                    
+                                    <small style="color: rgb(255, 0, 0); font-weight: bold;"
+                                      *ngIf="this.credentials.get('password')?.invalid && this.credentials.get('password')?.touched">
+                                      Clave es requerida</small>
+                                    <br>
+                                    </div>
+                            </div>
+                        
+                            <div class="row" style="margin-top: 3.5em;">
+                                <div class="col-12">
+                                    <button class="button-33" role="button" [disabled]="this.credentials.invalid">
+                                        <i class="fa-solid fa-key"></i>
+                                        INICIAR SESIÓN
+                                    </button>
+                                </div>                            
+                            </div>
+                        </form>
+                    </div>
+                </div>
+        </div>
+    </div>
+</div>
+
