--- a/clinica_online/src/app/components/navbar/navbar.component.html
+++ b/clinica_online/src/app/components/navbar/navbar.component.html
@@ -74,34 +74,40 @@
                 <span style="margin-left: 0.5em;">Home</span>
             </a>
           </li>
-          <li class="nav item opt-sidebar" (click)="onClickSidebar('seleccion')">
-            <a class="nav-link text-white" [ngClass]="this.selectedOpt == 'seleccion' ? 'clicked' : ''">
-              <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
-              Seleccion Usuarios
+          <li class="nav item opt-sidebar" (click)="onClickSidebar('seleccion')" *ngIf="this.user && this.user.perfil == 'administrador'">
+            <a class="nav-link text-white" [routerLink]="'/seleccion-usuarios'" [ngClass]="this.selectedOpt == 'seleccion' ? 'clicked' : ''">
+              <i class="fa-solid fa-users"></i>
+              <span style="margin-left: 0.5em;">Seleccion Usuarios</span>  
             </a>
           </li>
         </ul>
         <hr>
-        <div class="dropdown">
+        <div class="dropdown" *ngIf="!this.loading">
           <a class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-user"></i>
-            <span style="margin-left: 0.5em;"><strong>Acceso</strong></span>
+            <span style="margin-left: 0.5em;"><strong>{{this.acceso}}</strong></span>
           </a>
           <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-            <li>
+            <li *ngIf="!this.user">
                 <a class="dropdown-item" [routerLink]="'/registro'">
                     <i class="fa-solid fa-user-plus"></i>
                     <span style="margin-left: 0.45em;">Registro</span>
                 </a>
             </li>
-            <li>
+            <li *ngIf="!this.user">
                 <a class="dropdown-item" [routerLink]="'/login'">
                     <i class="fa-solid fa-key"></i>
                     <span style="margin-left: 0.7em;">Login</span>
                 </a>
             </li>
-                <li><hr class="dropdown-divider"></li>
-                <li>
+            <li *ngIf="this.user">
+              <a class="dropdown-item" [routerLink]="'/login'">
+                <i class="fa-solid fa-address-card"></i>
+                  <span style="margin-left: 0.7em;">Mi Perfil</span>
+              </a>
+            </li>
+                <li><hr class="dropdown-divider" *ngIf="this.user"></li>
+                <li *ngIf="this.user">
                   <a class="dropdown-item" (click)="logout()">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <span style="margin-left: 0.45em;">Logout</span>
@@ -109,6 +115,9 @@
                 </li>
           </ul>
         </div>
+
+        <span class="loader" *ngIf="this.loading"></span>
+
       </div>
     
     
