--- a/clinica_online/src/app/pages/login/login.component.html
+++ b/clinica_online/src/app/pages/login/login.component.html
@@ -1,4 +1,3 @@
-
 <div class="row wrapper">
     <div class="col-3 sidebar">
         <app-navbar></app-navbar>
@@ -38,19 +37,22 @@
                                     <br>
                                     </div>
                             </div>
-                        
+                         
+                            
                             <div class="row" style="margin-top: 3.5em;">
                                 <div class="col-12">
-                                    <button class="button-33" role="button" [disabled]="this.credentials.invalid">
+                                    <button class="button-33 mt-0" role="button" [disabled]="this.credentials.invalid"> 
                                         <i class="fa-solid fa-key"></i>
                                         INICIAR SESIÓN
                                     </button>
                                 </div>                            
                             </div>
                         </form>
+                        <span class="loader mt-1" *ngIf="this.loading"></span>
                     </div>
                 </div>
         </div>
     </div>
 </div>
+
 
