--- a/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.html
+++ b/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.html
@@ -6,7 +6,7 @@
     <div class="col-9">
         <div class="container">
             <div class="row">
-                <div class="card col-9 offset-1 scale-up-top" style="height: 450px; margin-left: 1em;">
+                <div class="card col-9 offset-1 scale-up-top mb-2" style="height: auto; margin-left: 1em;">
                     <div class="card-body">
                       <h2 class="card-title">Seleccion de Usuarios</h2>
                       
@@ -30,7 +30,7 @@
                                 mat-fab
                                 class="btn-fav"
                                 title="Descargar detalles de turnos">
-                                <img class="img-btn" src="{{user.imagen1}}" alt="imagen"/>
+                                <img style="width: 40px; height: 40px;" src="{{user.imgPerfil}}" alt="imagen"/>
                                 <p class="user-name">{{user.name}}</p>
                               </button>
                             </td>
