--- a/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.css
+++ b/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.css
@@ -99,7 +99,68 @@ h2 {
   touch-action: manipulation;
 }
 
+.button-33-deshab {
+  background-color: #e24d08;
+  border-radius: 10px;
+  box-shadow: rgba(31, 10, 124, 0.2) 0 -25px 18px -14px inset,rgba(31, 10, 124, 0.2) 0 1px 2px,rgba(31, 10, 124, 0.2) 0 2px 4px,rgba(31, 10, 124, 0.2) 0 4px 8px,rgba(31, 10, 124, 0.2) 0 8px 16px,rgba(31, 10, 124, 0.2) 0 16px 32px;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 18px;
+  font-weight: 450;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-33-deshab:hover {
+  box-shadow: rgba(241, 90, 2, 0.35) 0 -25px 18px -14px inset,rgba(241, 90, 2, 0.35) 0 1px 2px,rgba(241, 90, 2, 0.35) 0 2px 4px,rgba(241, 90, 2, 0.35) 0 4px 8px,rgba(241, 90, 2, 0.35) 0 8px 16px,rgba(241, 90, 2, 0.35) 0 16px 32px;
+  transform: scale(1.05) rotate(-1deg);
+}
+
 .button-33:hover {
   box-shadow: rgba(13, 33, 209, 0.35) 0 -25px 18px -14px inset,rgba(13, 33, 209, 0.35) 0 1px 2px,rgba(13, 33, 209, 0.35) 0 2px 4px,rgba(13, 33, 209, 0.35) 0 4px 8px,rgba(13, 33, 209, 0.35) 0 8px 16px,rgba(13, 33, 209, 0.35) 0 16px 32px;
   transform: scale(1.05) rotate(-1deg);
 }
+
+.btn-fav {
+  width: 3rem;
+  height: 3rem;
+}
+
+.btn-fav:hover {
+  background: #418eccd2;
+  color: #fff;
+  transition: background 0.5s, color 0.5s;
+}
+
+.img-btn {
+  width: 34px;
+  left: 3em;
+}
+
+.loader {
+  width: 24px;
+  height: 24px;
+  border: 5px solid #1d1c1ce3;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
