--- a/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.html
+++ b/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.html
@@ -4,16 +4,18 @@
         <app-navbar [selectedOpt]="'seleccion'"></app-navbar>
     </div>
     <div class="col-9">
-        <div class="container">
-            <div class="row">
-                <div class="card col-9 offset-1 scale-up-top mb-2" style="height: auto; margin-left: 1em;">
-                    <div class="card-body">
+      <div class="container">
+        <div class="row">
+          <div class="card col-9 offset-1 scale-up-top mb-2" style="height: auto; margin-left: 1em;">
+            <div class="card-body">
                       <h2 class="card-title">Seleccion de Usuarios</h2>
-                      
-                      <table class="table">
+
+                      <span class="loader mt-1" *ngIf="this.loading"></span>
+
+                      <table class="table" *ngIf="!this.loading">
                         <thead>
                           <tr>
-                            <th scope="col">VER TURNOS</th>
+                            <th scope="col">TURNOS</th>
                             <th scope="col">PERFIL</th>
                             <th scope="col">NOMBRE</th>
                             <th scope="col">APELLIDO</th>
@@ -30,8 +32,8 @@
                                 mat-fab
                                 class="btn-fav"
                                 title="Descargar detalles de turnos">
-                                <img style="width: 40px; height: 40px;" src="{{user.imgPerfil}}" alt="imagen"/>
-                                <p class="user-name">{{user.name}}</p>
+                                <img class="img-btn" src="{{user.imgPerfil}}" alt="imagen"/>
+      
                               </button>
                             </td>
                             <td style="text-transform: upperCase">
@@ -47,12 +49,14 @@
                               <div *ngIf="user.perfil == 'especialista'">
                                 <button
                                   class="button-33"
-                                  *ngIf="!user.aprobado">
+                                  *ngIf="!user.habilitado"
+                                  (click)="habilitar(user.uid)">
                                   Habilitar
                                 </button>
                                 <button
-                                  class="btn-deshabilitar"
-                                  *ngIf="user.aprobado">
+                                  class="button-33-deshab"
+                                  *ngIf="user.habilitado"
+                                  (click)="deshabilitar(user.uid)">
                                   Deshabilitar
                                 </button>
                               </div>
