--- a/clinica_online/src/app/pages/login/login.component.html
+++ b/clinica_online/src/app/pages/login/login.component.html
@@ -70,6 +70,10 @@
                                         <img class='btn-av' [src]="usersAcceso[4].imgPerfil" alt="ico" [ngStyle]="{'width':'3rem', 'height':'3.5rem', 'margin-left':'1em', 'border-radius':'50%'}" (click)="onClickSeleccionar(usersAcceso[4], 5)" [ngClass]="this.seleccionado == 5 ? 'clicked' : ''">
                                     </div>
 
+                                    <div class="col-2">
+                                        <img class='btn-av' [src]="usersAcceso[5].imgPerfil" alt="ico" [ngStyle]="{'width':'3rem', 'height':'3.5rem', 'margin-left':'1em', 'border-radius':'50%'}" (click)="onClickSeleccionar(usersAcceso[4], 6)" [ngClass]="this.seleccionado == 6 ? 'clicked' : ''">
+                                    </div>
+
 
                                 </div>
                             </div>
