--- a/clinica_online/src/app/components/altas-admin/altas-admin.component.html
+++ b/clinica_online/src/app/components/altas-admin/altas-admin.component.html
@@ -32,7 +32,7 @@
                             <a [routerLink]="''">
                                 <button class="button-33" role="button">
                                     <i class="fa-solid fa-circle-left"></i>
-                                    HOME
+                                    VOLVER
                                 </button>
                             </a>
                         </div>                            
