--- a/clinica_online/src/app/components/navbar/navbar.component.html
+++ b/clinica_online/src/app/components/navbar/navbar.component.html
@@ -74,7 +74,13 @@
                 <span style="margin-left: 0.5em;">Home</span>
             </a>
           </li>
-          <li class="nav item opt-sidebar" (click)="onClickSidebar('seleccion')" *ngIf="this.user && this.user.perfil == 'administrador' && !this.loading">
+          <li class="nav nav-pills flex-column mb-auto" (click)="onClickSidebar('mis-turnos')" *ngIf="this.user && !this.loading && (this.user.perfil == 'especialista' || this.user.perfil == 'paciente')">
+            <a class="nav-link text-white" [routerLink]="'/mis-turnos'" [ngClass]="this.selectedOpt == 'mis-turnos' ? 'clicked' : ''">
+              <i class="fa-solid fa-calendar-check"></i>
+              <span style="margin-left: 0.5em;">Mis Turnos</span>  
+            </a>
+          </li>
+          <li class="nav nav-pills flex-column mb-auto" (click)="onClickSidebar('seleccion')" *ngIf="this.user && this.user.perfil == 'administrador' && !this.loading">
             <a class="nav-link text-white" [routerLink]="'/seleccion-usuarios'" [ngClass]="this.selectedOpt == 'seleccion' ? 'clicked' : ''">
               <i class="fa-solid fa-users"></i>
               <span style="margin-left: 0.5em;">Seleccion Usuarios</span>  
@@ -101,7 +107,7 @@
                 </a>
             </li>
             <li *ngIf="this.user">
-              <a class="dropdown-item" [routerLink]="'/login'">
+              <a class="dropdown-item" [routerLink]="'/mi-perfil'">
                 <i class="fa-solid fa-address-card"></i>
                   <span style="margin-left: 0.7em;">Mi Perfil</span>
               </a>
